--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
-  "name": "challenge",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.25",
-    "@types/react": "18.0.6",
-    "@types/react-dom": "18.0.2",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
-  }
+ "name": "challenge",
+ "version": "0.1.0",
+ "private": true,
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+ },
+ "dependencies": {
+  "@emotion/react": "^11.9.0",
+  "@emotion/styled": "^11.8.1",
+  "@mui/icons-material": "^5.6.2",
+  "@mui/material": "^5.6.2",
+  "add": "^2.0.6",
+  "lodash": "^4.17.21",
+  "next": "12.1.5",
+  "react": "18.0.0",
+  "react-dom": "18.0.0",
+  "yarn": "^1.22.18"
+ },
+ "devDependencies": {
+  "@types/lodash": "^4.14.182",
+  "@types/node": "17.0.25",
+  "@types/react": "18.0.6",
+  "@types/react-dom": "18.0.2",
+  "@typescript-eslint/eslint-plugin": "^5.17.0",
+  "@typescript-eslint/parser": "^5.17.0",
+  "eslint": "7.32.0",
+  "eslint-config-next": "12.1.5",
+  "eslint-config-standard": "^16.0.3",
+  "eslint-plugin-import": "^2.25.4",
+  "eslint-plugin-node": "^11.1.0",
+  "eslint-plugin-prefer-arrow": "^1.2.3",
+  "eslint-plugin-promise": "^5.2.0",
+  "eslint-plugin-react": "^7.28.0",
+  "eslint-plugin-react-hooks": "^4.4.0",
+  "prettier": "^2.6.1",
+  "prettier-eslint": "^13.0.0",
+  "typescript": "^4.6.3",
+  "typescript-eslint": "^0.0.1-alpha.0"
+ }
 }
