--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "@mui/icons-material": "^5.6.2",
   "@mui/material": "^5.6.2",
   "add": "^2.0.6",
+  "axios": "^0.27.2",
   "lodash": "^4.17.21",
   "next": "12.1.5",
   "react": "18.0.0",
   "react-dom": "18.0.0",
+  "swr": "^1.3.0",
   "yarn": "^1.22.18"
  },
  "devDependencies": {
