--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "next": "12.1.5",
   "react": "18.0.0",
   "react-dom": "18.0.0",
+  "react-hook-form": "^7.30.0",
+  "recoil": "^0.7.2",
   "swr": "^1.3.0",
   "yarn": "^1.22.18"
  },
