--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dev": "next dev",
   "build": "next build",
   "start": "next start",
-  "lint": "next lint"
+  "lint": "next lint",
+  "test": "jest"
  },
  "dependencies": {
   "@emotion/react": "^11.9.0",
@@ -25,12 +26,17 @@
   "yarn": "^1.22.18"
  },
  "devDependencies": {
+  "@testing-library/jest-dom": "^5.16.4",
+  "@testing-library/react": "^13.2.0",
+  "@types/jest": "^27.5.0",
   "@types/lodash": "^4.14.182",
   "@types/node": "17.0.25",
   "@types/react": "18.0.6",
   "@types/react-dom": "18.0.2",
+  "@types/react-test-renderer": "^18.0.0",
   "@typescript-eslint/eslint-plugin": "^5.17.0",
   "@typescript-eslint/parser": "^5.17.0",
+  "babel-jest": "^28.0.3",
   "eslint": "7.32.0",
   "eslint-config-next": "12.1.5",
   "eslint-config-standard": "^16.0.3",
@@ -40,8 +46,12 @@
   "eslint-plugin-promise": "^5.2.0",
   "eslint-plugin-react": "^7.28.0",
   "eslint-plugin-react-hooks": "^4.4.0",
+  "identity-obj-proxy": "^3.0.0",
+  "jest": "^28.0.3",
+  "jest-environment-jsdom": "^28.0.2",
   "prettier": "^2.6.1",
   "prettier-eslint": "^13.0.0",
+  "react-test-renderer": "^18.1.0",
   "typescript": "^4.6.3",
   "typescript-eslint": "^0.0.1-alpha.0"
  }
