--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
  "compilerOptions": {
+  "baseUrl": "src",
+  "paths": {
+   "test-utils": ["./utils/test-utils"]
+  },
   "target": "es5",
   "lib": ["dom", "dom.iterable", "esnext"],
   "allowJs": true,
@@ -15,6 +19,6 @@
   "jsx": "preserve",
   "incremental": true
  },
- "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+ "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_app.test.js", "jest.config.js"],
  "exclude": ["node_modules"]
 }
